--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,11 +9,16 @@ $std_border: 8px;
 $sidebar_width: 285px;
 $header_height: 70px;
 $avatar_size: 48px;
+$dashboard_header_height: 100px;
 
 // colors
-$color_lighten_5: #e8eaf6;
-$color_darken_4: #1a237e;
 $color_lighten_3: #9fa8da;
+$color_lighten_4: #c5cae9;
+$color_lighten_5: #e8eaf6;
+
+$color_darken_3: #303f9f ;
+$color_darken_4: #1a237e;
+
 $color_white: #fff;
 $color_red: #dc3545;
 $border_color: $color_lighten_3;
