--- a/src/components/MainApp/MainApp.scss
+++ b/src/components/MainApp/MainApp.scss
@@ -63,7 +63,7 @@ $user_card_height: 180px;
       }
     }
   }
-  header {
+  header.main-app-header {
     position: absolute;
     left: $sidebar_width;
     height: $header_height;
@@ -87,5 +87,28 @@ $user_card_height: 180px;
     width: calc(100% - #{$sidebar_width});
     height: calc(100% - #{$header_height});
     overflow: auto;
+    .dashboard-screen-header {
+      background-color: $color_darken_4;
+      color: $color_lighten_5;
+      height: $dashboard_header_height;
+      width: 100%;
+      left: 0;
+      display: flex;
+      align-items: center;
+      font-size: 1.4em;
+      padding-left: $hor_space * 2;
+      box-shadow:inset 0 0 10px 5px rgba(0, 0, 0, 0.24);
+      background: linear-gradient(to right, $color_darken_4 0%, $color_darken_3 100%);
+      h1 {
+        font-weight: normal;
+      }
+    }
+    .dashboard-screen-section {
+      background-color: $color_lighten_5;
+      height: calc(100% - #{$dashboard_header_height});
+      top: $dashboard_header_height;
+      widows: 100%;
+      padding: $hor_space * 2;
+    }
   }
 }
