--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -7,7 +7,6 @@ body,
   font-family: $font_family;
   color: $font_color_dark;
   margin: 0;
-  line-height: 1em;
 }
 
 #app section.screen {
@@ -25,11 +24,18 @@ button, a {
   &.btn {
     border: 1px solid transparent;
     color: $font_color_light;
-    padding: 6px 12px;
+    height: 40px;
     cursor: pointer;
-    border-radius: $std_border;
+    border-radius: $std_border / 2;
     color: $color_white;
     font-size: 1.1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .material-icons {
+      padding-left: 6px;
+      font-size: 1.2em;
+    }
     &:active {
       outline: 5px auto -webkit-focus-ring-color;
       outline-offset: -2px;
@@ -39,10 +45,14 @@ button, a {
   &.primary {
     background-color: #2ed573;
   }
+  &.danger {
+    background-color: $color_red;
+  }
 }
 
 .form-control {
   width: 100%;
+  margin-bottom: $ver_space;
   label {
     display: block;
     margin-bottom: 3px;
@@ -54,7 +64,7 @@ button, a {
     height: 40px;
     border: 1px $border_color solid;
     padding: 0 $hor_space / 2;
-    border-radius: $std_border;
+    border-radius: $std_border / 2;
   }
   &.error {
     input[type="text"],
@@ -74,4 +84,8 @@ button, a {
   border-radius: $std_border;
   border: 1px solid $border_color;
   box-shadow: 0 0 3px 0px $border_color;
+}
+
+.pointer {
+  cursor: pointer;
 }
