--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,3 +1,5 @@
+@import "../styles/pure-table.css";
+
 html,
 body,
 #app {
@@ -20,7 +22,8 @@ body,
   text-decoration: none;
 }
 
-button, a {
+button,
+a {
   &.btn {
     border: 1px solid transparent;
     color: $font_color_light;
@@ -32,6 +35,7 @@ button, a {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-width: 85px;
     .material-icons {
       padding-left: 6px;
       font-size: 1.2em;
