--- a/src/components/MainApp/MainApp.scss
+++ b/src/components/MainApp/MainApp.scss
@@ -1,4 +1,4 @@
-$user_card_height: 180px;
+$user_card_height: 165px;
 
 #dashboard {
   position: relative;
@@ -13,7 +13,7 @@ $user_card_height: 180px;
     color: $color_lighten_5;
     .user-card {
       $size: $avatar_size * 1.7;
-      height: $user_card_height;
+      height: $user_card_height + ($size / 2);
       position: relative;
       padding: $ver_space $hor_space;
       background-color: rgba($color_white, 0.1);
@@ -42,7 +42,7 @@ $user_card_height: 180px;
         border: 10px solid $color_darken_4;
         bottom: -#{$size/2};
         left: 50%;
-        margin-left: -#{$size/2}
+        margin-left: -#{$size/2};
       }
     }
     ul.dashboard-nav {
@@ -97,8 +97,12 @@ $user_card_height: 180px;
       align-items: center;
       font-size: 1.4em;
       padding-left: $hor_space * 2;
-      box-shadow:inset 0 0 10px 5px rgba(0, 0, 0, 0.24);
-      background: linear-gradient(to right, $color_darken_4 0%, $color_darken_3 100%);
+      box-shadow: inset 0 0 10px 5px rgba(0, 0, 0, 0.24);
+      background: linear-gradient(
+        to right,
+        $color_darken_4 0%,
+        $color_darken_3 100%
+      );
       h1 {
         font-weight: normal;
       }
@@ -120,6 +124,8 @@ $user_card_height: 180px;
           display: flex;
           align-items: center;
         }
+      }
+      .content-block-body {
       }
     }
   }
