--- a/src/components/MainApp/Writers/Writers.scss
+++ b/src/components/MainApp/Writers/Writers.scss
@@ -3,4 +3,45 @@
     width: 100%;
     height: 500px;
   }
+  .writers-table {
+    width: 100%;
+    border: 0;
+    tr {
+      border-bottom: 1px solid $color_lighten_3;
+      th {
+        text-align: left;
+        height: $small_avatar_size;
+        border: 0;
+        padding: $hor_space;
+        font-weight: normal;
+      }
+      td {
+        border: 0;
+        padding: $ver_space $hor_space;
+        .avatar {
+          width: $small_avatar_size;
+          height: $small_avatar_size;
+          border-radius: 100%;
+        }
+        &.avatar-column {
+          width: $small_avatar_size;
+        }
+        &.column-actions {
+          width: ($btn_min_width * 2) + ($hor_space * 4) + 4;
+          button {
+            display: inline-block;
+            &:last-child {
+              margin-left: $hor_space;
+            }
+          }
+        }
+        &:first-child {
+          padding-left: $hor_space * 2;
+        }
+        &:last-child {
+          padding-right: $hor_space * 2;
+        }
+      }
+    }
+  }
 }
