--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
-@import url('https://fonts.googleapis.com/css?family=Grand+Hotel');
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Grand+Hotel");
 
 // dimensions
 $header_height: 70px;
@@ -9,14 +9,16 @@ $std_border: 8px;
 $sidebar_width: 285px;
 $header_height: 70px;
 $avatar_size: 48px;
+$small_avatar_size: 40px;
 $dashboard_header_height: 100px;
+$btn_min_width: 85px;
 
 // colors
 $color_lighten_3: #9fa8da;
 $color_lighten_4: #c5cae9;
 $color_lighten_5: #e8eaf6;
 
-$color_darken_3: #303f9f ;
+$color_darken_3: #303f9f;
 $color_darken_4: #1a237e;
 
 $color_white: #fff;
@@ -24,8 +26,8 @@ $color_red: #dc3545;
 $border_color: $color_lighten_3;
 
 // fonts
-$font_family: 'Roboto', sans-serif;
-$logo_font: 'Grand Hotel', cursive;;
+$font_family: "Roboto", sans-serif;
+$logo_font: "Grand Hotel", cursive;
 $font_size: 1em;
 $font_size_large: 1.2em;
 $font_color_dark: $color_darken_4;
