--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,4 +1,5 @@
 @import "../styles/pure-table.css";
+@import "~vue-wysiwyg/dist/vueWysiwyg.css";
 
 html,
 body,
@@ -45,24 +46,31 @@ a {
       outline-offset: -2px;
       background-color: #398439;
     }
-  }
-  &.primary {
-    background-color: #2ed573;
-  }
-  &.danger {
-    background-color: $color_red;
+    &.primary {
+      background-color: #2ed573;
+    }
+    &.danger {
+      background-color: $color_red;
+    }
+    &.btn-link {
+      background: none;
+      color: $color_darken_3;
+      text-decoration: underline;
+    }
   }
 }
 
 .form-control {
   width: 100%;
-  margin-bottom: $ver_space;
+  margin-bottom: $ver_space + 5;
   label {
     display: block;
-    margin-bottom: 3px;
+    margin-bottom: 5px;
   }
   input[type="text"],
   input[type="password"],
+  input[type="number"],
+  input[type="date"],
   select {
     width: 100%;
     height: 40px;
@@ -90,6 +98,40 @@ a {
 
     small {
       color: $color_red;
+    }
+  }
+  $input_icon_width: 40px;
+  .iconized-input {
+    width: 100%;
+    position: relative;
+    input {
+      padding-right: $input_icon_width + ($hor_space / 2);
+    }
+    .icon {
+      width: $input_icon_width;
+      position: absolute;
+      height: 100%;
+      right: 0;
+      top: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: $color_lighten_3;
+      border-top-right-radius: $std_border / 2;
+      border-bottom-right-radius: $std_border / 2;
+      color: $color_lighten_5;
+    }
+  }
+}
+
+.fields-row {
+  display: flex;
+  flex-wrap: wrap;
+  .form-control {
+    width: 200px;
+    margin-left: $hor_space;
+    &:first-child {
+      margin-left: 0;
     }
   }
 }
