added tasks screens

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -92,6 +92,7 @@ a {
   &.error {
     input[type="text"],
     input[type="password"],
+    input[type="number"],
     select {
       border-color: $color_red;
     }
