added navigation for writers

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -216,7 +216,7 @@ table.pure-table {
     display: flex;
     justify-content: center;
     border-right: 1px solid $color_darken_4;
-    &.active {
+    &.router-link-active {
       background-color: $color_darken_4;
       color: $color_white;
     }
