--- a/src/components/MainApp/MainApp.scss
+++ b/src/components/MainApp/MainApp.scss
@@ -2,7 +2,7 @@ $user_card_height: 165px;
 
 #dashboard {
   position: relative;
-  aside {
+  aside.app-aside {
     position: absolute;
     top: 0;
     left: 0;
