--- a/src/components/MainApp/TaskDetail/TaskSubmissions/TaskSubmissions.scss
+++ b/src/components/MainApp/TaskDetail/TaskSubmissions/TaskSubmissions.scss
@@ -1,4 +1,17 @@
 #task-submissions-block {
+  .content-block-body {
+    .user-avatar {
+      margin: 0 $hor_space;
+    }
+    .submission-list-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .material-icons {
+      margin: 0 $hor_space;
+    }
+  }
   .task-submission-modal {
     .modal-container {
       width: 100%;
